--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,11 +39,11 @@ dependencies:
   mobx_codegen: ^2.0.5+2
   google_ml_vision: ^0.0.7
   image_picker: ^0.8.4+4
-  cached_network_image: ^3.2.0
   google_fonts: ^2.2.0
   provider: ^6.0.2
   kartal: ^2.2.1
-
+  sqflite: ^2.0.1
+  path: ^1.8.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -67,7 +67,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/avatar.png
+    - assets/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
