--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   kartal: ^2.2.1
   sqflite: ^2.0.1
   path: ^1.8.0
+  connectivity: ^3.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
