--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   sqflite: ^2.0.1
   path: ^1.8.0
   connectivity: ^3.0.6
+  rect_getter: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
